25 April 2004  Menelaos Karavelas <mkaravel@cse.nd.edu>
- changes in the traits: moved the various functors from
  predicates/Apollonius_graph_predicates_C2.h to separate files named
  predicates/Ag2_*.h; the two traits classes have been appropriately modified
- the Apollonius_graph_face_base_2.h file no longer exists; changed the data
  structures so that the requirement is now Triangulation_gace_base_2<Gt>;
  this reduces the memory requirements
- the version before these (major) changes can be recovered using the tag
  before_design_changes_April_2004
- the doc has been appropriately modified to reflect the changes in the
  requirements of the face base class
- the doc for the Apollonius_graph_2 class has been modified to define
  size_type; also the types that are typedefs from the data structure are now
  defined as typedefs instead of nested types

13 April 2004 Menelaos Karavelas 
- split the apollonius graph test suite into three separate parts;
  this will hopefully decrease compilation time and memory requirements
  for the compilation

25 March 2004 Radu Ursu
- made doc work with the current manual tools implementation

1.68 (08 February 2004) [rursu]
- updated the headers of the examples files

1.67 (1 February 2004) [mk]
- fixed bugs that gcc 3.4 was complaining about; mainly added "this->"
  in front of inherited methods

1.66 (25 January 2004) [mk]
- make some undocumented methods protected in Apollonius_graph_2;
  test suite was appropriately altered; these changes have also been
  reflected in the CGAL 3.0 bug fix release

1.65 (21 January 2004) [mk]
- number_of*() methods now return size_type

1.64 (19 January 2004) [mk]
- removed the macro CGAL_CFG_MATCHING_BUG_2

1.63 (16 January 2004) [mk]
- updated the doc for the changes in the previous submission

1.62 (6 January 2004) [mk]
- moved Qt_widget related I/O to a separate file

1.61 (6 January 2004) [mk]
- removed inclusion of Qt_widget.h from Parabola*2.h and Hyperbola_segment_2.h